--- a/index.html
+++ b/index.html
@@ -1,14 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title> Bookmark</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+
+    <header class="header ">
+        <nav class=" container header-nav nav">
+            <img src="img/Group 11.svg" alt="logo">
+
+            <ul class="nav__links">
+              <li class="nav__item">
+                <a class="nav__link" href="#section--1">FEATURES</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#section--2">PRICING</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#section--3">CONTACT</a>
+              </li>
+              <li class="nav__item">
+                <button class="nav-btn " >LOGIN</button>
+              </li>
+            </ul>
+          </nav>
+      <section class="header-section">
+        <div class="left">
+            <h1 class="simple">A Simple Bookmark <br> Manager</h1>
+            <p class="header-text">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+            <div class="btns">
+                <button class="chrome btn">Get it on Chrome</button>
+                <button class="firefox btn">Get it on Firefox</button>
+            </div>
+        </div>
+        <div class="right">
+            <img class="komp" src="img/Group 22.jpg" alt="img" />
+            <img class="background-img" src="img/Rectangle.png"></img>
+        </div>
+      </section>
+    </header>
+    <section id="section--1" class=" container">
+        <h2 class="features">Features</h2>
+        <p class="feature-text">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+
+        <div class="top--1">
+            <div class="simple-bookmarking opening activ">
+                <p class="simple-info info">Simple Bookmarking</p>
+            </div>
+
+            <div class="speedy-bsearching opening">
+                <p class="speedy-info info">Speedy Searching</p>
+            </div>
+
+            <div class="easy-sharing opening">
+                <p class="easy-info info">Easy Sharing</p>
+            </div>
+        </div>
+
+        <div class="bottom--1">
+            <div class="tags tag-1 tag-activ">
+                <div class="img">
+                    <img class="desktop-2" src="img/Group 32.svg" alt="img">
+                    <img class="background-img-2" src="img/Rectangle Copy 14.png"></img>
+                </div>
+                <div class="tag-text">
+                    <h2 class="tag-h2">Bookmark in one click</h2>
+                    <p class="tag-info">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                    <button class="btn more-info">More Info</button>
+                </div>
+            </div>
+
+            <div class="tags tag-2 ">
+                <div class="img"><img class="desktop-2" src="img/Group 3.svg" alt="img">
+                    <img class="background-img-2" src="img/Rectangle Copy 14.png"></img></div>
+                <div class="tag-text">
+                    <h2 class="tag-h2">Intelligent search</h2>
+                    <p class="tag-info">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+                    <button class="btn more-info">More Info</button>
+                </div>
+            </div>
+
+            <div class="tags tag-3 ">
+                <div class="img">
+                    <img class="share-img" src="img/Group.svg" alt="img" >
+                    <img class="background-img-2" src="img/Rectangle Copy 14.png"></div>
+                <div class="tag-text">
+                    <h2 class="tag-h2">Share your bookmarks</h2>
+                    <p class="tag-info">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
+                    <button class="btn more-info">More Info</button>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <section id="section--2" class="container">
+        <h2 class="download">Download the extension</h2>
+        <p class="download-info">We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
+        <div class="download-apps">
+
+            <div class="box chrome-app">
+                <img src="img/chrome 2.svg" alt="chrome">
+                <h5 class="app-name">Add to Chrome</h5>
+                <p class="app-info">Minimum version 62</p>
+                <p class="dotted"></p>
+                <button class="btn install-extension">Add & Install Extension</button>
+            </div>
+
+            <div class="box firefox-app">
+                <img src="img/firefox.svg" alt="chrome">
+                <h5 class="app-name">Add to Firefox</h5>
+                <p class="app-info">Minimum version 55</p>
+                <p class="dotted"></p>
+                <button class="btn install-extension">Add & Install Extension</button>
+            </div>
+
+            <div class="box opera-app">
+                <img src="img/Combined Shape 2.svg" alt="chrome">
+                <h5 class="app-name">Add to Opera</h5>
+                <p class="app-info">Minimum version 46</p>
+                <p class="dotted"></p>
+                <button class="btn install-extension">Add & Install Extension</button>
+            </div>
+
+        </div>
+    </section>
+    <section id="section--3" class="container">
+        <h3 class="frequently">Frequently Asked Questions</h3>
+        <p class="frequently-info">Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
+        <hr class="hr-desktop">
+        <div class="questions-1 questions">
+            <div class="open-info open1">
+                <h4 class="question">What is Bookmark?</h4>
+                <i class="fa-solid fa-2xl fa-angle-down icon-1" style="color: #5267df;"></i>
+
+                <i class="fa-solid fa-angle-up fa-2xl icon-4" style="color: #df5252; display: none;"></i>
+
+            </div>
+            <p class="question-info info1 "> Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. </p>
+        </div>
+        <hr>
+        <div class="questions-2 questions">
+            <div class="open-info open2">
+                <h4 class="question">How can I request a new browser?</h4>
+                <i class="fa-solid fa-2xl fa-angle-down icon-2" style="color: #5267df;"></i>
+
+                <i class="fa-solid fa-angle-up fa-2xl icon-4" style="color: #df5252; display: none;"></i>
+
+            </div>
+            <p class="question-info info2"> Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. </p>
+        </div>
+        <hr>
+        <div class="questions-3 questions">
+            <div class="open-info open3">
+                <h4 class="question">Is there a mobile app?</h4>
+                <i class="fa-solid fa-2xl fa-angle-down icon-3" style="color: #5267df;"></i>
+
+                <i class="fa-solid fa-angle-up fa-2xl icon-4" style="color: #df5252; display: none;"></i>
+
+            </div>
+            <p class="question-info info3"> Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. </p>
+        </div>
+        <hr>
+        <div class="questions-4 questions">
+            <div class="open-info open4">
+                <h4 class="question">What about other Chromium browsers?</h4>
+                <i class="fa-solid fa-2xl fa-angle-down icon-4" style="color: #5267df;"></i>
+
+                <i class="fa-solid fa-angle-up fa-2xl icon-4" style="color: #df5252; display: none;"></i>
+
+            </div>
+            <p class="question-info info4"> Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. </p>
+        </div>
+        <hr>
+        <button class="btn more-info question-btn">More Info</button>
+    </section>
+    <footer >
+        <section class="footer-section ">
+            <h4 class="joined">35,000+ ALREADY JOINED</h4>
+            <h2 class="what-we-do">Stay up-to-date with what we’re doing</h2>
+            <div class="email">
+                <div class="input">
+                    <input type="email" id="email" placeholder="Enter your email address">
+                    <i class="error fa-solid fa-2xl fa-circle-exclamation" style="color: #fa5959;"></i>
+                    <p class="input-p">Whoops, make sure it’s an email</p>
+                </div>
+                <button class="contact-us btn">Contact Us</button>
+            </div>
+        </section>
+        <div class="footer-nav container nav">
+            <div class="footer-nav-left">
+                <img src="img/Group 11 (1).svg" alt="logo">
+
+                <ul class="nav__links">
+                <li class="nav__item">
+                    <a class="nav__link" href="#section--1">FEATURES</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" href="#section--2">PRICING</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" href="#section--3">CONTACT</a>
+                </li>
+                </ul>
+            </div>
+            <div class="icons">
+                <i class="fa-brands fa-square-facebook fa-2xl"></i>
+                <i class="fa-brands fa-twitter fa-2xl"></i>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/3f11f82952.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
